--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 <body>
   <header>
-    <div class="logo"><img src="assets/img/logo.png" alt="Logo Saya"></div>
+    <div class="logo"><img src="https://petarukanstore12.github.io/Tri-Layanan-Lokal/assets/img/logo-bima-web.png">
+</div>
     <div class="lang">EN | ID</div>
   </header>
 
